--- a/app/src/main/res/layout/fragment_update_dictionary.xml
+++ b/app/src/main/res/layout/fragment_update_dictionary.xml
@@ -54,10 +54,12 @@
             app:layout_constraintEnd_toEndOf="@+id/edit_text_add_native_word"
             app:layout_constraintStart_toStartOf="@+id/edit_text_add_native_word"
             app:layout_constraintTop_toBottomOf="@+id/edit_text_add_native_word"
-            tools:text="foreign" />
+            tools:text="foreign"
+            />
 
 
         <Button
+            android:focusable="true"
             android:id="@+id/button_add_word_pair"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
