reformat + added recyclerView delete/restore swipe handler

--- a/app/src/main/res/layout/app_bar_main_drawer.xml
+++ b/app/src/main/res/layout/app_bar_main_drawer.xml
@@ -2,10 +2,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/main_linear_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="android.liebald.com.cula.ui.main.MainDrawerActivity">
+    tools:context="com.liebald.android.cula.ui.main.MainDrawerActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
