v1 of updating items in library

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -27,5 +27,8 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <style name="ButtonsStyle" parent="@style/Widget.AppCompat.Button.Colored">
+        <item name="background">@color/secondaryColor</item>
+    </style>
 
 </resources>
