--- a/app/src/main/res/layout/nav_header_main_drawer.xml
+++ b/app/src/main/res/layout/nav_header_main_drawer.xml
@@ -19,7 +19,7 @@
         android:text="@string/app_name"
         android:textSize="80sp"
         android:textStyle="bold"
-        android:textColor="@color/accent"
+        android:textColor="@color/secondaryColor"
         android:gravity="center_horizontal"
         android:fontFamily="cursive"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
@@ -31,7 +31,7 @@
         android:gravity="center_horizontal"
         android:textSize="16sp"
         android:textStyle="bold"
-        android:textColor="@color/accent"
+        android:textColor="@color/secondaryColor"
         android:fontFamily="serif"
         android:text="@string/app_name_full" />
 
