KnowledgeLevel now included in library

--- a/app/src/main/res/layout/activity_update_library.xml
+++ b/app/src/main/res/layout/activity_update_library.xml
@@ -36,19 +36,69 @@
             app:layout_constraintTop_toBottomOf="@+id/edit_text_add_native_word" />
 
 
+        <RadioGroup
+            android:id="@+id/radioGroup"
+            android:layout_width="wrap_content"
+            android:layout_height="47dp"
+            android:layout_gravity="center"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:orientation="horizontal"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/edit_text_add_foreign_word">
+
+            <RadioButton
+                android:id="@+id/rb_knowledgeLevel_1"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:background="@color/knowledgeLevel_1"
+                android:checked="true"
+                android:theme="@style/KnowledgeLevelRadioButton" />
+
+            <RadioButton
+                android:id="@+id/rb_knowledgeLevel_2"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:background="@color/knowledgeLevel_2"
+                android:theme="@style/KnowledgeLevelRadioButton" />
+
+            <RadioButton
+                android:id="@+id/rb_knowledgeLevel_3"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:background="@color/knowledgeLevel_3"
+                android:theme="@style/KnowledgeLevelRadioButton" />
+
+            <RadioButton
+                android:id="@+id/rb_knowledgeLevel_4"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:background="@color/knowledgeLevel_4"
+                android:theme="@style/KnowledgeLevelRadioButton" />
+
+            <RadioButton
+                android:id="@+id/rb_knowledgeLevel_5"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:background="@color/knowledgeLevel_5"
+                android:theme="@style/KnowledgeLevelRadioButton" />
+
+        </RadioGroup>
+
         <Button
             android:id="@+id/button_add_word_pair"
             style="@style/Widget.AppCompat.Button.Colored"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
             android:focusable="true"
             android:onClick="commitLibraryEntry"
             android:text="@string/update_library_button_save_word"
             app:layout_constraintEnd_toStartOf="@+id/button_add_word_pair_return"
             app:layout_constraintHorizontal_chainStyle="packed"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/edit_text_add_foreign_word" />
+            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
 
         <Button
             android:id="@+id/button_add_word_pair_return"
