--- a/app/src/main/res/layout/library_item.xml
+++ b/app/src/main/res/layout/library_item.xml
@@ -17,6 +17,7 @@
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
             android:layout_marginEnd="@dimen/padd_10"
+            android:contentDescription="@string/delete"
             android:src="@drawable/ic_delete_white_24dp" />
 
         <TextView
@@ -38,6 +39,9 @@
         android:layout_height="wrap_content"
         android:background="@android:color/white"
         android:orientation="horizontal"
+        android:clickable="true"
+        android:focusable="true"
+        android:foreground="?attr/selectableItemBackground"
         android:padding="@dimen/padd_10">
 
         <TextView
@@ -59,10 +63,4 @@
             tools:text="foreignWord" />
     </LinearLayout>
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-
-    </RelativeLayout>
 </FrameLayout>
