--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,5 +9,10 @@
     <color name="primaryTextColor">#000000</color>
     <color name="secondaryTextColor">#000000</color>
     <color name="bg_row_background">#fa315b</color>
+    <color name="knowledgeLevel_1">#dd2c00</color>
+    <color name="knowledgeLevel_2">#ffab00</color>
+    <color name="knowledgeLevel_3">#ffd600</color>
+    <color name="knowledgeLevel_4">#aeea00</color>
+    <color name="knowledgeLevel_5">#00c853</color>
 
 </resources>
