--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -31,4 +31,10 @@
         <item name="background">@color/secondaryColor</item>
     </style>
 
+    <style name="KnowledgeLevelRadioButton" parent="Theme.AppCompat.Light.DarkActionBar">
+        <item name="colorControlNormal">@android:color/white</item>
+        <item name="colorControlActivated">@android:color/white</item>
+        <item name="android:gravity">center</item>
+    </style>
+
 </resources>
