--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,8 +11,10 @@
     <color name="bg_row_background">#fa315b</color>
     <color name="knowledgeLevel_1">#dd2c00</color>
     <color name="knowledgeLevel_2">#ffab00</color>
-    <color name="knowledgeLevel_3">#ffd600</color>
+    <color name="knowledgeLevel_3">#ffea00</color>
     <color name="knowledgeLevel_4">#aeea00</color>
     <color name="knowledgeLevel_5">#00c853</color>
+    <color name="grey">#9e9e9e</color>
+
 
 </resources>
