--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -37,4 +37,8 @@
         <item name="android:gravity">center</item>
     </style>
 
+    <style name="Label" parent="@style/TextAppearance.AppCompat.Body2">
+        <item name="android:textColor">@color/grey</item>
+    </style>
+
 </resources>
