--- a/app/src/main/res/layout/library_item.xml
+++ b/app/src/main/res/layout/library_item.xml
@@ -45,7 +45,7 @@
         android:padding="@dimen/padd_10">
 
         <TextView
-            android:id="@+id/language"
+            android:id="@+id/nativeWord"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
