--- a/app/src/main/res/values/array.xml
+++ b/app/src/main/res/values/array.xml
@@ -6,4 +6,19 @@
     <string-array name="languages_value">
         <item>noLanguage</item>
     </string-array>
+
+    <string-array name="knowledgeLevel">
+        <item>@string/knowledgeLevel1</item>
+        <item>@string/knowledgeLevel2</item>
+        <item>@string/knowledgeLevel3</item>
+        <item>@string/knowledgeLevel4</item>
+        <item>@string/knowledgeLevel5</item>
+    </string-array>
+    <string-array name="knowledgeLevel_value">
+        <item>@string/knowledgeLevel1_key</item>
+        <item>@string/knowledgeLevel2_key</item>
+        <item>@string/knowledgeLevel3_key</item>
+        <item>@string/knowledgeLevel4_key</item>
+        <item>@string/knowledgeLevel5_key</item>
+    </string-array>
 </resources>
