--- a/app/src/main/res/xml/fragment_settings.xml
+++ b/app/src/main/res/xml/fragment_settings.xml
@@ -10,29 +10,37 @@
     <!--android:title="Category 1">-->
     <!--</android.support.v7.preference.PreferenceCategory>-->
 
-    <android.support.v7.preference.SwitchPreferenceCompat
-        android:defaultValue="true"
-        android:key="key1"
-        android:summary="Switch Summary"
-        android:title="Switch Preference" />
+    <!--<android.support.v7.preference.SwitchPreferenceCompat-->
+    <!--android:defaultValue="true"-->
+    <!--android:key="key1"-->
+    <!--android:summary="Switch Summary"-->
+    <!--android:title="Switch Preference" />-->
 
-    <android.support.v7.preference.EditTextPreference
-        android:defaultValue="Default value"
-        android:dialogMessage="Dialog Message"
-        android:key="key2"
-        android:summary="EditText Summary"
-        android:title="EditText Preference" />
-    <android.support.v7.preference.CheckBoxPreference
-        android:defaultValue="true"
-        android:key="key3"
-        android:summary="CheckBox Summary"
-        android:title="CheckBox Preference" />
+    <!--<android.support.v7.preference.EditTextPreference-->
+    <!--android:defaultValue="Default value"-->
+    <!--android:dialogMessage="Dialog Message"-->
+    <!--android:key="key2"-->
+    <!--android:summary="EditText Summary"-->
+    <!--android:title="EditText Preference" />-->
+    <!--<android.support.v7.preference.CheckBoxPreference-->
+    <!--android:defaultValue="true"-->
+    <!--android:key="key3"-->
+    <!--android:summary="CheckBox Summary"-->
+    <!--android:title="CheckBox Preference" />-->
+
+    <ListPreference
+        android:defaultValue="@string/settings_default_knowledgeLevel_default"
+        android:entries="@array/knowledgeLevel"
+        android:entryValues="@array/knowledgeLevel_value"
+        android:key="@string/settings_default_knowledgeLevel_key"
+        android:summary="@string/settings_default_knowledgeLevel_summary"
+        android:title="@string/settings_default_knowledgeLevel_title" />
 
     <ListPreference
         android:defaultValue="@string/settings_languages_default"
         android:entries="@array/languages"
         android:entryValues="@array/languages_value"
         android:key="@string/settings_languages_key"
-        android:summary="Select your language to train"
+        android:summary="@string/settings_languages_summary"
         android:title="@string/settings_languages_title" />
 </android.support.v7.preference.PreferenceScreen>
