--- a/app/src/main/res/layout/nav_header_main_drawer.xml
+++ b/app/src/main/res/layout/nav_header_main_drawer.xml
@@ -15,24 +15,24 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:fontFamily="cursive"
+        android:gravity="center_horizontal"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         android:text="@string/app_name"
-        android:textSize="80sp"
-        android:textStyle="bold"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:textColor="@color/secondaryColor"
-        android:gravity="center_horizontal"
-        android:fontFamily="cursive"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+        android:textSize="80sp"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        android:textColor="@color/secondaryColor"
         android:fontFamily="serif"
-        android:text="@string/app_name_full" />
+        android:gravity="center_horizontal"
+        android:text="@string/app_name_full"
+        android:textColor="@color/secondaryColor"
+        android:textSize="16sp"
+        android:textStyle="bold" />
 
 </LinearLayout>
