--- a/app/src/main/res/layout/library_item.xml
+++ b/app/src/main/res/layout/library_item.xml
@@ -41,24 +41,34 @@
         android:clickable="true"
         android:focusable="true"
         android:foreground="?attr/selectableItemBackground"
-        android:orientation="horizontal"
-        android:padding="@dimen/padd_10">
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/nativeWord"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:padding="8dp"
+            android:layout_marginStart="24dp"
+            android:paddingBottom="12dp"
+            android:paddingTop="12dp"
             android:textAppearance="?attr/textAppearanceListItem"
             tools:text="language" />
+
+        <View
+            android:layout_width="1dp"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="4dp"
+            android:layout_marginTop="4dp"
+            android:background="@color/colorPrimaryDark" />
 
         <TextView
             android:id="@+id/foreignWord"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:padding="8dp"
+            android:layout_marginStart="24dp"
+            android:paddingBottom="12dp"
+            android:paddingTop="12dp"
             android:textAppearance="?attr/textAppearanceListItem"
             tools:text="foreignWord" />
     </LinearLayout>
