--- a/app/src/main/res/layout/fragment_start_training.xml
+++ b/app/src/main/res/layout/fragment_start_training.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <android.support.constraint.ConstraintLayout
         android:id="@+id/library_coordinator_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        tools:context="org.liebald.android.cula.ui.startTraining.StartTrainingFragment">
 
         <TextView
             android:id="@+id/tv_label_start_training_instructions"
@@ -68,6 +70,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
+            android:maxWidth="200dp"
             android:layout_marginStart="8dp"
             app:layout_constraintBottom_toBottomOf="@+id/tv_label_start_training_lesson"
             app:layout_constraintEnd_toEndOf="parent"
@@ -101,13 +104,12 @@
 
 
         <Button
-            android:id="@+id/button_add_word_pair_return"
+            android:id="@+id/bt_start_training"
             style="@style/Widget.AppCompat.Button.Colored"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
             android:focusable="true"
-            android:onClick="startTraining"
             android:text="@string/start_training_button"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
